compiler-core/src/parse/snapshots/gleam_core__parse__tests__const_with_function_call_with_args.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\npublic fn wibble() { 123 }\nconst wib: Int = wibble(1, \"wobble\")\n"
snapshot_kind: text
---
----- SOURCE CODE

public fn wibble() { 123 }
const wib: Int = wibble(1, "wobble")


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:3:18
  │
3 │ const wib: Int = wibble(1, "wobble")
  │                  ^^^^^^^ Functions can only be called within other functions
